// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupView render actual content render toggles view: ad-hoc tools 1`] = `
"<Fragment>
  <div className=\\"ms-Fabric ad-hoc-tools-panel\\">
    <LaunchPanelHeader deps={{...}} title=\\"test title\\" supportLinkHandler={{...}} popupWindow={[undefined]} openAdhocToolsPanel={[Function]} featureFlags={{...}} />
    <AdHocToolsPanel backLinkHandler={[Function]} diagnosticViewToggleFactory={[undefined]} />
  </div>
  <TelemetryPermissionDialog deps={{...}} isFirstTime={true} />
</Fragment>"
`;

exports[`PopupView render actual content render toggles view: launch pad 1`] = `
"<Fragment>
  <div className=\\"ms-Fabric launch-panel\\" id=\\"new-launch-pad\\">
    <LaunchPanelHeader deps={{...}} title=\\"test title\\" subtitle={{...}} supportLinkHandler={{...}} popupWindow={[undefined]} openAdhocToolsPanel={[Function]} featureFlags={{...}} />
    <LaunchPad deps={{...}} productName=\\"test title\\" rowConfigs={[undefined]} version=\\"2\\" />
  </div>
  <TelemetryPermissionDialog deps={{...}} isFirstTime={true} />
</Fragment>"
`;

exports[`PopupView render actual content render toggles view: launch pad: subtitle 1`] = `
"<Fragment>
  <NewTabLink href=\\"https://go.microsoft.com/fwlink/?linkid=2082374\\" aria-label=\\"demo video\\" title=\\"watch the 3 minute video introduction\\" onClick={[Function: onClickTutorialLink]}>
    Watch 3-minute video introduction
  </NewTabLink>
   
</Fragment>"
`;

exports[`PopupView render actual content renderAdHocToolsPanel 1`] = `
"<Fragment>
  <div className=\\"ms-Fabric ad-hoc-tools-panel\\">
    <LaunchPanelHeader deps={{...}} title=\\"test title\\" supportLinkHandler={{...}} popupWindow={[undefined]} openAdhocToolsPanel={[Function]} featureFlags={{...}} />
    <AdHocToolsPanel backLinkHandler={[Function]} diagnosticViewToggleFactory={{...}} />
  </div>
  <TelemetryPermissionDialog deps={{...}} isFirstTime={true} />
</Fragment>"
`;

exports[`PopupView render spinner 1`] = `
<StyledSpinnerBase
  className="insights-spinner"
  label="Loading..."
  size={3}
/>
`;

exports[`PopupView renderFailureMsgPanelForChromeUrl 1`] = `
<div
  className="ms-Fabric unsupported-url-info-panel"
>
  <Header
    title="test title"
  />
  <div
    className="ms-Grid main-section"
  >
    <div
      className="launch-panel-general-container"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Accessibility Insights for Web can't run on this URL.</br>You'll need to go to a different page.",
        }
      }
    />
  </div>
</div>
`;

exports[`PopupView renderFailureMsgPanelForFileUrl 1`] = `
<div
  className="ms-Fabric unsupported-url-info-panel"
>
  <Header
    title="test title"
  />
  <div
    className="ms-Grid main-section"
  >
    <div
      className="launch-panel-general-container"
    >
      Your Chrome settings don't allow Accessibility Insights for Web to run on file URLs.
    </div>
    <div>
      <div>
        To allow this extension to run on file URLs:
      </div>
      <div>
        1. Open 
        <NewTabLink
          aria-label="open test title extension page"
          onClick={[Function]}
        >
          test title extension page
        </NewTabLink>
        .
      </div>
      <div>
        2. Enable 
        <span
          className="ms-fontWeight-semibold"
        >
          Allow Access to file URLs
        </span>
        .
      </div>
    </div>
  </div>
</div>
`;
